# c2vcg

CVSROOT/: cvsignore
c2vcg/: .cvsignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.cvs  README  TODO  c2vcg.lsm.in  c2vcg.spec.in  config-h.in  config.h  config.status  configure.ac
c2vcg/c2vcgadt/: .cvsignore  Makefile  Makefile.am  id-emit.c  id-emit.h  list.c  list.h  set.c  set.h  system.h
c2vcg/doc/: Makefile  Makefile.am  c2vcg.1  c2vcg.info  c2vcg.texinfo
c2vcg/m4/: readline.m4  sys_errlist.m4  sys_siglist.m4
c2vcg/replace/: .cvsignore  Makefile
c2vcg/share/: Makefile  Makefile.am
c2vcg/share/c-pgms/: Makefile  Makefile.am  foe.c  ifstat.c  just.c  pr2.c  prdel.c  prique.c  prmain.c  rcas.c  setmain.c
c2vcg/src/: .cvsignore  Makefile  Makefile.am  argopt.c  c2vcg.c  c2vcg.h  gram.c  gram.h  gram.y  memmgm.c  memmgm.h  output.c  output.h  scan.c  scan.l
