## Makefile.am -- Process this file with automake to produce Makefile.in
## Copyright (C) 2006 Sharad Pratap
##
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; either version 2, or (at your option)
## any later version.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
## MA 02110-1301, USA.


### Makefile.am --- 

## Author: s@large.net
## Version: $Id$
## Keywords: 
## X-URL: 

MAINTAINERCLEANFILES	= Makefile.in

cpgms_DATA = foe.c ifstat.c just.c pr2.c prdel.c prique.c prmain.c rcas.c

cpgmsdir   = $(pkgdatadir)/c-pgms/

## cpgmsdir   = $(datadir)/@PACKAGE@/c-pgms/

EXTRA_DIST = $(cpgms_DATA)

## pkginclude_HEADERS 	= builtin.h common.h error.h eval.h list.h \
##			sic.h syntax.h






### Makefile.am ends here

